website/versioned_docs/version-2.4.x/reference/subsystems/pylint.mdx
---
title: pylint
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Pylint linter for Python code (https://www.pylint.org/).

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[pylint]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]pylint-skip`}
  env_repr="PANTS_PYLINT_SKIP"
  default_repr={`False`}
>
  Don&#x27;t use Pylint when running
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 lint`
</Option>

### `args`

<Option
  cli_repr={`--pylint-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_PYLINT_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to Pylint, e.g.
  `--pylint-args="--ignore=foo.py,bar.py --disable=C0330,W0311"`
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--pylint-version=<str>`}
  env_repr="PANTS_PYLINT_VERSION"
  default_repr={`pylint>=2.4.4,<2.5`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--pylint-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_PYLINT_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `console_script`

<Option
  cli_repr={`--pylint-console-script=<str>`}
  env_repr="PANTS_PYLINT_CONSOLE_SCRIPT"
  default_repr={`pylint`}
>
  The console script for the tool. Using this option is generally preferable to
  (and mutually exclusive with) specifying an --entry-point since console script
  names have a higher expectation of staying stable across releases of the tool.
  Usually, you will not want to change this from the default.
</Option>

### `entry_point`

<Option
  cli_repr={`--pylint-entry-point=<str>`}
  env_repr="PANTS_PYLINT_ENTRY_POINT"
  default_repr={`None`}
>
  The entry point for the tool. Generally you only want to use this option if
  the tool does not offer a --console-script (which this option is mutually
  exclusive with). Usually, you will not want to change this from the default.
</Option>

### `config`

<Option
  cli_repr={`--pylint-config=<file_option>`}
  env_repr="PANTS_PYLINT_CONFIG"
  default_repr={`None`}
>
  Path to `pylintrc` or alternative Pylint config file
</Option>

### `source_plugins`

<Option
  cli_repr={`--pylint-source-plugins="[<target_option>, <target_option>, ...]"`}
  env_repr='PANTS_PYLINT_SOURCE_PLUGINS'
  default_repr={`[]`}
>
An optional list of `python_library` target addresses to load first-party plugins.

You must set the plugin&#x27;s parent directory as a source root. For example, if your plugin is at `build-support/pylint/custom_plugin.py`, add &#x27;build-support/pylint&#x27; to `[source].root_patterns` in `pants.toml`. This is necessary for Pants to know how to tell Pylint to discover your plugin. See https://www.pantsbuild.org/v2.4/docs/source-roots

You must also set `load-plugins=$module_name` in your Pylint config file, and set the `[pylint].config` option in `pants.toml`.

While your plugin&#x27;s code can depend on other first-party code and third-party requirements, all first-party dependencies of the plugin must live in the same directory or a subdirectory.

To instead load third-party plugins, set the option `[pylint].extra_requirements` and set the `load-plugins` option in your Pylint config.

</Option>

## Deprecated options

None

</span>

